--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,7 @@ name: CiCd-S3-Runner
 
 on:
   push:
-    branches: [ main ]
-      
+    branches: [main]
 
 jobs:
   build:
@@ -14,4 +13,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.2.2
 
-      - run: ls
+      - name: Check Code and install Dependencies
+        run: |
+          ls
+          node -v
+          npm ci
+
+      - name: Build
+        run: |
+          npm run build
+          ls
