--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,10 @@ jobs:
         run: |
           npm run build
           ls
+
+  deploy:
+
+        runs-on: ubuntu-latest
+        needs: build 
+        steps: 
+            - run: ls
