--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,14 @@ jobs:
 
       - name: Build
         run: |
-          npm run build
-          ls
+              npm run build
+              ls
+
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v4.4.3
+        with:
+            name: dist-files
+            path: ./dist        
 
   deploy:
 
