--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,9 @@ jobs:
         runs-on: ubuntu-latest
         needs: build 
         steps: 
+            - name: Download a Build Artifact
+              uses: actions/download-artifact@v4.1.8
+              with:
+                name: dist-files
+                path: ./dist
             - run: ls
