--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,12 @@ jobs:
                 name: dist-files
                 path: ./dist
             - run: ls
+
+            - name: install-aws-cli-action
+              uses: unfor19/install-aws-cli-action@v1
+            - run: echo "$super_secret" > ~/.aws/credentials
+              env: 
+                super_secret: ${{ secrets.AWS_CONFIG }} 
+            - run: aws configure list-profiles
+            - run: aws s3 ls --region eu-central-1 --profile Marc
+            - run: aws s3 sync ./dist s3://mywebsite05112024/ --region eu-central-1 --profile Marc    
