--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,6 @@ jobs:
               env: 
                 super_secret: ${{ secrets.AWS_CONFIG }}
             - run: aws configure list-profiles
-            - run: aws s3 ls --region eu-central-1 --profile techstarter
-            - run: aws s3 sync --region eu-central-1 ./dist s3://mywebsite765765/ --profile techstarter
+            - run: aws s3 ls --region eu-central-1 --profile Marc
+            - run: aws s3 sync --region eu-central-1 ./dist s3://mywebsite765765/ --profile Marc
         
