--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,5 +64,5 @@ jobs:
                 super_secret: ${{ secrets.AWS_CONFIG }}
             - run: aws configure list-profiles
             - run: aws s3 ls --region eu-central-1 --profile Marc
-            - run: aws s3 sync --region eu-central-1 ./dist s3://mywebsite05112024/ --profile Marc
+            - run: aws s3 sync --region eu-central-1 ./dist s3://cicdbucket05112024/ --profile Marc
         
