--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,68 +1,56 @@
-name: CI
+name: CiCd-S3-Runner
 
 on:
-  push: 
-    branches: [ "main" ]
-  
+  push:
+    branches: [main]
 
 jobs:
-    build:
-    
-      runs-on: self-hosted
+  build:
+    runs-on: self-hosted
+    steps:
+      - run: echo "Start Build Process"
 
-      steps:
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
 
-        - run: echo "Start Build Process"
+      - name: Setup Node.js enviroment
+        uses: actions/setup-node@v4.1.0  
 
-        - name: Checkout
-          uses: actions/checkout@v4.2.2
+      - name: Check Code and install Dependencies
+        run: |
+          ls
+          node -v
+          npm ci
 
+      - name: Build
+        run: |
+              npm run build
+              ls
 
-        - name: Setup Node.js environment
-          uses: actions/setup-node@v4.1.0
-          with: 
-            node-version: '22.x'
-      
-
-        - name: check code and install dependencies
-          run: |
-                ls 
-                node -v
-                npm ci
-
-        - name: build
-          run: |
-                npm run build
-                ls
-
-        - name: Upload a Build Artifact
-          uses: actions/upload-artifact@v4.4.3
-          with:
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v4.4.3
+        with:
             name: dist-files
-            path: ./dist
-            
+            path: ./dist        
 
-    deploy:
+  deploy:
 
         runs-on: ubuntu-latest
-        needs: build
-        steps:
-
+        needs: build 
+        steps: 
             - name: Download a Build Artifact
               uses: actions/download-artifact@v4.1.8
               with:
                 name: dist-files
                 path: ./dist
-
             - run: ls
 
             - name: install-aws-cli-action
               uses: unfor19/install-aws-cli-action@v1
-            - run: mkdir ~/.aws/
+            - run: mkdir ~/.aws  
             - run: echo "$super_secret" > ~/.aws/credentials
               env: 
-                super_secret: ${{ secrets.AWS_CONFIG }}
+                super_secret: ${{ secrets.AWS_CONFIG }} 
             - run: aws configure list-profiles
             - run: aws s3 ls --region eu-central-1 --profile Marc
-            - run: aws s3 sync --region eu-central-1 ./dist s3://cicdbucket05112024/ --profile Marc
-        
+            - run: aws s3 sync ./dist s3://cicdbucket05112024/ --region eu-central-1 --profile Marc    
