--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,9 @@ jobs:
         uses: actions/checkout@v4.2.2
 
       - name: Setup Node.js enviroment
-        uses: actions/setup-node@v4.1.0  
+        uses: actions/setup-node@v4.1.0
+        with:
+          node-version: 22.x  
 
       - name: Check Code and install Dependencies
         run: |
